# Rbrtiming

./: README.md  Rbrtiming.code-workspace  pyproject.toml
.github/workflows/: pull_request_template.md  quality-check.yml
app/: test.py
resources/: ReadMe_RaceStatDB.txt  raceStatDB.sqlite3
